# app/Http/Controllers/AuthController.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Auth;
 use App\Models\User;
 use Validator;
 use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Support\Facades\Storage;
 
 class AuthController extends Controller
 {
@@ -15,52 +16,47 @@ class AuthController extends Controller
 
     /**
      * @OA\Post(
-     ** path="/api/auth/login",
+     *   path="/api/auth/login",
      *   tags={"Auth"},
      *   summary="Login",
      *   operationId="login",
-     *
-     *   @OA\Parameter(
-     *      name="email",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Parameter(
-     *      name="password",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *          type="string"
-     *      )
+     *   @OA\RequestBody(
+     *     required=true,
+     *     description="User login data",
+     *     @OA\MediaType(
+     *       mediaType="application/json",
+     *       @OA\Schema(
+     *         required={"email", "password"},
+     *         @OA\Property(property="email", type="string"),
+     *         @OA\Property(property="password", type="string"),
+     *       )
+     *     )
      *   ),
      *   @OA\Response(
-     *      response=200,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
+     *     response=200,
+     *     description="Success",
+     *     @OA\MediaType(
+     *       mediaType="application/json"
+     *     )
      *   ),
      *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
+     *     response=401,
+     *     description="Unauthenticated"
      *   ),
      *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
+     *     response=400,
+     *     description="Bad Request"
      *   ),
      *   @OA\Response(
-     *      response=404,
-     *      description="not found"
+     *     response=404,
+     *     description="Not Found"
      *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
+     *   @OA\Response(
+     *     response=403,
+     *     description="Forbidden"
+     *   )
+     * )
+     */
 
     public function login(Request $request){
         $validator = Validator::make($request->all(), [
@@ -78,68 +74,48 @@ class AuthController extends Controller
 
     /**
      * @OA\Post(
-     ** path="/api/auth/register",
-     *   tags={"Auth"},
-     *   summary="Register",
-     *   operationId="register",
-     *
-     *  @OA\Parameter(
-     *      name="name",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *  @OA\Parameter(
-     *      name="email",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Parameter(
-     *      name="password",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *      @OA\Parameter(
-     *      name="password_confirmation",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=201,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request Закушуємо нормально"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
+     *     tags={"Auth"},
+     *     path="/api/auth/register",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"email", "lastName", "name", "phone", "image", "password", "password_confirmation"},
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="lastName",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="phone",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password_confirmation",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Add Category.")
+     * )
+     */
 
 
     public function register(Request $request) {
@@ -147,16 +123,24 @@ class AuthController extends Controller
             'name' => 'required|string|between:2,100',
             'email' => 'required|string|email|max:100|unique:users',
             'password' => 'required|string|confirmed|min:6',
+            'phone' => 'required|string|max:40',
+            'image' => 'required|image|max:4096', // Assuming photo is uploaded as an image file
+            'lastName' => 'required|string|max:100',
         ]);
-
+        print (response()->json($request->all()));
         if($validator->fails()){
             return response()->json($validator->errors()->toJson(), Response::HTTP_BAD_REQUEST);
         }
 
+        $filename = uniqid(). '.' .$request->file("image")->getClientOriginalExtension();
+        Storage::disk('local')->put("public/images/users/".$filename,file_get_contents($request->file("image")));
+
         $user = User::create(array_merge(
             $validator->validated(),
-            ['password' => bcrypt($request->password)]
+            ['password' => bcrypt($request->password), 'image'=> $filename]
         ));
+
+
 
         return response()->json([
             'message' => 'User successfully registered',
@@ -194,22 +178,7 @@ class AuthController extends Controller
     }
 
 
-    /**
-     * @OA\Get(
-     *     path="/api/auth/user-profile",
-     *     tags={"Auth"},
-     *     security={{"apiAuth":{}}},
-     *     @OA\Header(
-     *      name="Authorization",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *     @OA\Response(response="200", description="Display a listing of projects.")
-     * )
-     */
+
 
 
     public function userProfile() {
@@ -225,9 +194,9 @@ class AuthController extends Controller
     protected function createNewToken($token){
         return response()->json([
             'access_token' => $token,
-            'token_type' => 'bearer',
-            'expires_in' => auth('api')->factory()->getTTL() * 60,
-           'user' => auth()->user()
+            //'token_type' => 'bearer',
+            'expires_in' => auth()->factory()->getTTL() * 60,
+            //'user' => auth()->user()
         ], Response::HTTP_OK);
     }
 }
