# app/Models/User.php
@@ -21,6 +21,9 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone',
+        'image',
+        'lastName',
     ];
 
     /**
@@ -42,15 +45,17 @@ class User extends Authenticatable implements JWTSubject
         'email_verified_at' => 'datetime',
     ];
 
-    public function getJWTIdentifier() {
+    public function getJWTIdentifier()
+    {
         return $this->getKey();
     }
-    /**
-     * Return a key value array, containing any custom claims to be added to the JWT.
-     *
-     * @return array
-     */
-    public function getJWTCustomClaims() {
-        return [];
+
+    public function getJWTCustomClaims()
+    {
+        return [
+            "email" => $this->email,
+            "name" => $this->name,
+            "image" => $this->image
+        ];
     }
 }
